kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tutorial-app
  labels:
    name: tutorial-app
