kubernetes/09-react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: tutorial-app
  labels:
    app: react-frontend
spec:
  type: NodePort
  selector:
    app: react-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP

---
# Alternative: LoadBalancer service (uncomment if you want to use this instead)
# Note: On Rancher Desktop, LoadBalancer services work but NodePort is simpler
# apiVersion: v1
# kind: Service
# metadata:
#   name: react-frontend-loadbalancer
#   namespace: tutorial-app
#   labels:
#     app: react-frontend
# spec:
#   type: LoadBalancer
#   selector:
#     app: react-frontend
#   ports:
#   - name: http
#     port: 3001
#     targetPort: 80
#     protocol: TCP
